ISPN-16774 Sets working with transactional caches